# llpr

./: .gitignore  README.md  TODO  pyproject.toml  setup.cfg
experiments/: simple_fits.ipynb
experiments/cali_nneurons/: cali_nneurons.py
experiments/cali_ood/: cali_ood.py  cali_ood_from_saved.py  cali_ood_reproduce.py  cali_ood_test.py  plot_bin.py  plot_no_bin.py  timings.py
experiments/meteorology/australia/: aus_weather.ipynb  aus_weather_fit.ipynb  aus_weather_fit.py  aus_weather_process.py  plot_bin.py  plot_no_bin.py  timings.py
experiments/meteorology/lausanne/: lausanne_weather.py
experiments/pbp_benchmarks/: dataset.py  parse_outputs.py  pbp_ensemble.py  pbp_llgp.py  pbp_llpr.py
experiments/qm9/: dataset.py  dataset_no_atom.py  model.py  plot_bin.py  plot_no_bin.py  qm9 copy.py  qm9.py  qm9_from_trained.py  qm9_llgp.py  qm9_llpr.py  qm9_no_atom.py  qm9_ood.py  qm9_ood_test.py  qm9_test.py  timings.py  train.py
experiments/qm9/old/: dataset_ood.py  qm9_test_no_atom.py
experiments/simple_fits/: simple_fits.ipynb
experiments/theoretical_distribution/: iso_values.ipynb  theoretical_distribution.ipynb
llpr/: __init__.py  llpr.py  pr.py
llpr/deep_ensembles/: regression.py  train.py
llpr/utils/: metrics.py  to_device.py  train_tensor_inputs.py  validation_opt.py
tests/: test_consistency.py  test_regression.py  test_save_and_load.py  test_torchscript.py
