[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llpr"
version = "0.1.0"
authors = [
    { name = "Filippo Bigi", email = "filippo.bigi@epfl.ch" },
    { name = "Sanggyu Chong", email = "sanggyu.chong@epfl.ch" }
]
description = "A lightweight torch wrapper to calculate NN uncertainties"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "torch"
]

[project.urls]
homepage = "https://github.com/frostedoyster/llpr"
